<resources>
    <string name="app_name">WaterM</string>
    <string name="login_title">waterM</string>
    <string name="login_username">手机号码</string>
    <string name="login_password">输入密码</string>
    <string name="login_remember">记住密码</string>
    <string name="login_autoLogin">自动登录</string>
    <string name="login_button">登录</string>
    <string name="login_forget">忘记密码？</string>
    <string name="login_register">没有账号？注册</string>
    <string name="register_phone">请输入手机号</string>
    <string name="register_securityCode">发送验证码</string>
    <string name="register_backSecurityCode">请输入短信中的验证码</string>
    <string name="register_others">邮箱注册></string>
    <string name="forget_password_username">邮箱或手机号</string>
    <string name="action_settings">Settings</string>
    <string name="str_recorder_normal">按住 录音</string>
    <string name="str_recorder_recorder">松开 结束</string>
    <string name="str_recorder_want_cancel">松开手指 取消录音</string>

    <string name="action_feed">意见反馈</string>
    <string name="action_group_chat">发起群聊</string>
    <string name="action_add_friend">添加朋友</string>
    <string name="action_scan">扫一扫</string>
    <string name="action_search">搜索</string>
    <string name="action_add">添加</string>
    <string name="tab_weixin">待办任务</string>
    <string name="tab_contact">已办任务</string>
    <string name="patrol_task">待办巡检</string>
    <string name="patroled_task">已办巡检</string>
    <string name="repair_will">待办维修</string>
    <string name="repair_done">已办维修</string>
    <string name="tab_find">发现</string>
    <string name="tab_me">我</string>
    
</resources>
