<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/water">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_title"
            android:textSize="@dimen/login_title_size"
            android:gravity="center"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/login_corner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.16"
        android:padding="@dimen/login_corner_margin"
        android:layout_margin="@dimen/login_corner_margin"
        android:background="@drawable/background_login_corners">
        <AutoCompleteTextView
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_username_top"
            android:hint="@string/login_username"
            android:singleLine="true"
            android:inputType="text"/>
        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_username"
            android:layout_marginBottom="@dimen/login_username_top"
            android:hint="@string/login_password"
            android:password="true"
            android:singleLine="true"
            android:inputType="textPassword"/>
        <CheckBox
            android:id="@+id/login_checkBox_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_password"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/login_checkTextSize"
            android:text="@string/login_remember"/>
        <CheckBox
            android:id="@+id/login_checkBox_autoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_password"
            android:text="@string/login_autoLogin"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/login_button_margin"
            android:text="@string/login_button"
            android:textSize="20sp"
            android:background="@drawable/button_corners"
            android:textColor="#F5F5F5"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/login_forgetPw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:paddingLeft="@dimen/login_bottom_line"
            android:gravity="start"
            android:text="@string/login_forget"
            android:textSize="12sp"/>
        <TextView
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:longClickable="true"
            android:paddingEnd="@dimen/login_bottom_line"
            android:paddingRight="@dimen/login_bottom_line"
            android:gravity="end"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:text="@string/login_register"
            android:textSize="12sp"/>
    </RelativeLayout>

</LinearLayout>